# SplatTopBlog

./: .env.example  .env.local  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: claude-code-review.yml  deploy.yml
blog/: models.py
blog/templates/blog/: blog_index_page.html  blog_page.html
docs/: SplatTop_style_bible.md
home/templates/home/: home_page.html
splattopblog/: settings.py  wsgi.py
src/: manage.py  pytest.ini
src/blog/: feeds.py  middleware.py  models.py  post_processing.py  robots.py  views.py  wagtail_hooks.py
src/blog/markdown_extensions/: __init__.py  latex.py  random_choice.py
src/blog/migrations/: 0001_initial.py  0002_alter_blogpage_body.py  0003_alter_blogpage_body.py  0004_alter_blogpage_body.py  0005_alter_blogpage_body.py  0006_alter_blogpage_body.py  0007_alter_blogpage_body.py  0008_alter_blogpage_body.py  0009_alter_blogpage_body.py  0010_alter_blogpage_body.py  0011_add_blogpage_abstract.py  0012_add_blogpage_featured_image.py  0013_alter_blogpage_body.py  0014_alter_blogpage_body.py  0015_alter_blogpage_body.py  0016_alter_blogpage_body.py  0017_blogpage_social_image.py  0018_alter_blogpage_body.py  0019_blogpage_body_render_cache_key_and_more.py
src/blog/templates/blog/: blog_index_page.html  blog_page.html
src/blog/templates/blog/admin/: share_preview_panel.html
src/blog/templates/blog/blocks/: applet_embed_block.html  collapsible_block.html  glossary_block.html  render_block.html  takeaway_block.html
src/blog/templatetags/: blog_sanitize.py
src/blog/tests/: test_post_processing.py  test_security_seo.py
src/home/: models.py
src/home/migrations/: 0001_initial.py
src/home/templates/home/: home_page.html
src/splattopblog/: settings.py  urls.py
src/static/applets/: loser-winner.html  pagerank-forward-reverse.html  pagerank-volume-cancel.html
src/static/css/: admin.css  applet-base.css  site.css
src/static/js/: applet-utils.js  blog-post.js  katex-init.js
src/templates/: 404.html  500.html  base.html
templates/: base.html
