[project]
name = "splattop-blog"
version = "1.0.0"
description = "SplatTop Blog - Wagtail CMS blog for the SplatTop platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Wagtail CMS
    "wagtail>=6.0,<7.0",
    # Django (pulled by Wagtail, but explicit for clarity)
    "Django>=5.0,<6.0",
    # PostgreSQL
    "psycopg[binary]>=3.1",
    # Production server
    "gunicorn>=21.0",
    "uvicorn[standard]>=0.27",
    # Static files
    "whitenoise>=6.6",
    # Image processing
    "Pillow>=10.0",
    # Markdown support
    "wagtail-markdown>=0.11",
    # Environment variables
    "python-dotenv>=1.0",
    # Health checks
    "django-health-check>=3.17",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.0",
    "ipython>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar>=4.0",
    "ipython>=8.0",
]
