[project]
name = "splattop-blog"
version = "1.0.0"
description = "SplatTop Blog - Wagtail CMS blog for the SplatTop platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Wagtail CMS
    "wagtail>=6.0,<7.0",
    # Django (pulled by Wagtail, but explicit for clarity)
    "Django>=5.0,<6.0",
    # PostgreSQL
    "psycopg[binary]>=3.1",
    # Production server
    "gunicorn>=21.0",
    "uvicorn[standard]>=0.27",
    # Static files
    "whitenoise>=6.6",
    # Image processing
    "Pillow>=10.0",
    # Markdown support
    "wagtail-markdown>=0.11",
    # Environment variables
    "python-dotenv>=1.0",
    # Health checks
    "django-health-check>=3.17",
    # Object storage (S3/DO Spaces)
    "django-storages[s3]>=1.14",
]

[tool.uv]
dev-dependencies = [
    "django-debug-toolbar>=4.0",
    "ipython>=8.0",
    "pytest>=8.0",
    "pytest-django>=4.8",
    "ruff>=0.6.4",
]

# Don't try to build this as a Python package
package = false

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["src/**/migrations/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I"]
extend-ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["blog", "home", "splattopblog"]
